# terraform-parse

./: NOTES.md  README.md
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  hpa.yaml  service.yaml
terraform/: main.tf  outputs.tf  variables.tf
terraform_parse_service/: Dockerfile  README.md  pyproject.toml
terraform_parse_service/app/: main.py
terraform_parse_service/tests/: test_render.py
