[project]
name = "terraform-parse-service"
version = "0.1.0"
description = "A minimal API service that generates Terraform configuration for AWS S3 buckets from JSON requests."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
